--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,5 +17,12 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Build with Gradle
+    - name: Run Tests
       run: ./gradlew test --stacktrace
+    - name: Build debug APK
+      run: bash ./gradlew assembleDebug --stacktrace
+    - name: Upload APK
+      uses: actions/upload-artifact@v1
+      with:
+          name: app
+          path: androidApp/build/outputs/apk/debug/androidApp-debug.apk
