--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,6 +19,13 @@ jobs:
         java-version: 1.8
     - name: Run Tests
       run: ./gradlew test --stacktrace
+    - name: Build Assessment Model
+      run: ./gradlew :assessmentModel:build
+    - name: Upload debug aar
+      uses: actions/upload-artifact@v1
+      with:
+          name: debug aar
+          path: assessmentModel/build/outputs/aar/assessmentModel-debug.aar
     - name: Build debug APK
       run: bash ./gradlew assembleDebug --stacktrace
     - name: Upload APK
